src/components/Tweet.module.css
.tweet {
  display: flex;
  gap: 1rem;
  padding: 1rem;
  border-bottom: 1px solid rgb(var(--textcolor), 0.1);
  transition: background 0.2s;
}

.tweet:hover {
  background-color: rgb(var(--textcolor), 0.05);
}

.content {
  display: flex;
  flex-direction: column;
  gap: 0.4rem;
  width: 100%;
}

.user {
  color: rgb(var(--textcolor));
  font-weight: 600;
  text-decoration: none;
}

.user:hover {
  text-decoration: underline;
}

.username {
  color: grey;
  font-weight: lighter;
  margin-left: 0.5rem;
}

.reply {
  color: #00abee;
  font-weight: lighter;
  text-decoration: none;
}

.image {
  width: 100%;
  border-radius: 1rem;
}

.interaction {
  display: flex;
  align-items: center;
  gap: 4rem;
  user-select: none;
  font-size: 16px;
  margin-top: 0.5rem;
}

.like {
  display: inline;
  color: rgb(var(--textcolor));
  padding: 0.5rem;
  border-radius: 16rem;
  line-height: 0%;
}

.like:hover {
  cursor: pointer;
  background-color: rgb(255, 0, 0, 0.5);
}

.comment {
  display: inline;
  color: rgb(var(--textcolor));
  padding: 0.5rem;
  border-radius: 16rem;
  line-height: 0%;
}

.comment:hover {
  cursor: pointer;
  background-color: #00abee80;
}

.bookmark {
  display: inline;
  color: rgb(var(--textcolor));
  padding: 0.5rem;
  border-radius: 16rem;
  line-height: 0%;
}

.bookmark:hover {
  cursor: pointer;
  background-color: rgba(200, 200, 0, 0.5);
}

.more {
  padding: 0.5rem;
  border-radius: 16rem;
  line-height: 0%;
  position: relative;
}

.more:hover {
  cursor: pointer;
  background-color: rgb(var(--textcolor), 0.1);
}

.delete {
  position: absolute;
  right: 50%;
  top: 40px;
  width: max-content;
  background-color: rgb(var(--bgcolor));
  color: red;
  box-shadow: 0 0 10px 0 rgb(var(--textcolor), 0.2);
  padding: 1rem;
  border-radius: 0.5rem;
  z-index: 1;
  display: flex;
  align-items: center;
  gap: 0.5rem;
}

.delete:hover {
  cursor: pointer;
}

